添加模型控制

--- a/css/index.css
+++ b/css/index.css
@@ -76,3 +76,67 @@
         text-shadow: 0 -40px #d54062, 0 -60px #8fc0a9;
     }
 }
+
+/*########底部#######*/
+.container {
+    /* 这里的弹性布局 让元素能够水平排列 并且能够让a这个行内元素设置宽度和高度 */
+    display: flex;
+}
+
+.container .btn {
+    /* 溢出隐藏 */
+    overflow: hidden;
+    /* 相对定位 */
+    position: relative;
+    width: 90px;
+    height: 90px;
+    text-align: center;
+    margin: 0 10px;
+    border-radius: 25px;
+    background-color: #fff;
+    /* 盒子阴影 */
+    box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
+}
+
+.container .fa-solid {
+    /* 字体图标可以直接使用字体大小来设置大小 */
+    font-size: 38px;
+    /* 缩放0.8倍 */
+    transform: scale(0.8);
+    /* 行高 让这个字体图标垂直居中于盒子内 */
+    line-height: 90px;
+    /* 设置一下过渡 */
+    /* 第三个值是贝塞尔曲线 让运动曲线有无限可能 可以到官网自行探索 https://cubic-bezier.com/ */
+    transition: all 0.4s cubic-bezier(0.31, -0.1, 0.43, 1.59);
+}
+
+.container .btn::before {
+    content: "";
+    /* 绝对定位 */
+    position: absolute;
+    top: 90%;
+    left: -110%;
+    width: 120%;
+    height: 120%;
+    /* 顺时针旋转45度 */
+    transform: rotate(45deg);
+    transition: all 0.4s cubic-bezier(0.31, -0.1, 0.43, 1.59);
+}
+
+.container .btn .fa-bars {
+	color: #3b5988;
+}
+.container .fa-bars::before {
+	background-color: #3b5988;
+}
+
+.container .btn:hover::before {
+    top: -10%;
+    left: -10%;
+}
+
+.container .btn:hover .fa {
+    color: #fff;
+    /* 鼠标移入 恢复到原来的大小 */
+    transform: scale(1);
+}
