--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+body {
+    margin : 0;
+    overflow: hidden;
+}
+
+nav {
+    width: 100%;
+    height: 96px;
+}
+
 /*logo样式*/
 .logo {
     /* 设置 logo 的宽度和高度 */
