--- a/css/index.css
+++ b/css/index.css
@@ -5,13 +5,14 @@
 }
 
 body {
-    margin : 0;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 nav {
     width: 100%;
     height: 96px;
+    float: left;
 }
 
 /*logo样式*/
@@ -160,6 +161,7 @@ nav {
     position: absolute;
     bottom: 130px;
     margin: 0 auto;
+    float: left;
     display: none;
 }
 
