--- a/css/index.css
+++ b/css/index.css
@@ -156,12 +156,12 @@ nav {
     background-color: #3b5988;
 }
 
-/*###########轮播器样式#############*/
+
 /* 外层容器 */
 .my_swiper {
     position: absolute;
-    bottom: 115px;
-    /*margin: 0 auto;*/
+    bottom: 130px;
+    margin: 0 auto;
     float: left;
     display: none;
 }
@@ -173,7 +173,7 @@ nav {
 
 /* 轮播项 */
 .swiper .swiper-slide {
-    width: 40%;
+    width: 30%;
     height: 100%;
 
     font-size: 32px;
@@ -188,22 +188,23 @@ nav {
 
 @media (max-width: 1024px) {
     .my_swiper {
-        height: 20%;
+        height: 30%;
         width: 100%;
     }
+
     .swiper {
         width: 90%;
     }
 
     .swiper .swiper-slide {
-        width: 30%;
+        width: 70%;
     }
 
 }
 
 @media (min-width: 1025px) {
     .my_swiper {
-        height: 400px;
+        height: 275px;
         width: 100%;
     }
 
@@ -212,23 +213,241 @@ nav {
     }
 }
 
+.swiper-slide {
+    /* 背景图垂直、水平均居中 */
+    background-position: center center;
+    /* 背景图不平铺 */
+    background-repeat: no-repeat;
+    /* 当内容高度大于图片高度时，背景图像的位置相对于viewport固定 */
+    background-attachment: fixed;
+    /* 让背景图基于容器大小伸缩 */
+    background-size: 100% 100%;
+    /* 设置背景颜色，背景图加载过程中会显示背景色 */
+    background-color: #464646;
+
+}
+
 /* 色彩来源：https://color.uisdc.com/ */
 .swiper .swiper-slide-1 {
-    background-color: #425066;
+    background-image: url("../images/box/front1.jpg");
 }
 
 .swiper .swiper-slide-2 {
-    background-color: #8d4bbb;
+    background-image: url("../images/box/front2.jpg");
 }
 
 .swiper .swiper-slide-3 {
-    background-color: #9d2933;
+    background-image: url("../images/box/front3.jpg");
 }
 
 .swiper .swiper-slide-4 {
-    background-color: #003371;
+    background-image: url("../images/box/front4.jpg");
 }
 
 .swiper .swiper-slide-5 {
-    background-color: #4c8dae;
+    background-image: url("../images/box/front5.jpg");
+}
+
+.swiper .swiper-slide-6 {
+    background-image: url("../images/box/front6.jpg");
+}
+
+/*##########详情页面########*/
+#slide-sec {
+    /* 弹性布局 让页面元素垂直+水平居中 */
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    /* 让页面始终占浏览器总高 */
+    height: 100vh;
+    background-color: #ffffff;
+    background-image: url('./images/bg1.png');
+    background-size: auto;
+    /* 视距 增加盒子的立体感 */
+    perspective: 1000px;
+    z-index: 2;
+    visibility: hidden;
+}
+
+#slide_sec1 {
+    /* 相对定位 */
+    position: relative;
+    display: block;
+    width: 230px;
+    height: 125px;
+    /* 让子元素保留其3D位置 */
+    transform-style: preserve-3d;
+    /* 动画 名称 时长 linear 是匀速运动 infinite是无限次播放 */
+    animation: rotate 20s linear infinite;
+}
+
+#slide_sec1 div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #d3d1d1;
+    transition: all 1s;
+}
+
+#slide_sec1 div img {
+    width: 100%;
+    height: 100%;
+}
+
+#slide_sec1 div:nth-child(1) {
+    width: 250px;
+    height: 228px;
+    transform: translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(2) {
+    width: 250px;
+    height: 228px;
+    transform: rotateX(-180deg) translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(3) {
+    width: 250px;
+    height: 142px;
+    transform: rotateX(90deg) translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(4) {
+    width: 250px;
+    height: 142px;
+    transform: rotateX(-90deg) translateZ(157px);
+}
+
+#slide_sec1 div:nth-child(5) {
+    width: 142px;
+    height: 228px;
+    transform: rotateY(90deg) translateZ(179px);
+}
+
+#slide_sec1 div:nth-child(6) {
+    width: 142px;
+    height: 228px;
+    transform: rotateY(-90deg) translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(7) {
+    width: 250px;
+    height: 228px;
+    transform: translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(8) {
+    width: 250px;
+    height: 228px;
+    transform: rotateX(-180deg) translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(9) {
+    width: 250px;
+    height: 142px;
+    transform: rotateX(90deg) translateZ(71px);
+}
+
+#slide_sec1 div:nth-child(10) {
+    width: 250px;
+    height: 142px;
+    transform: rotateX(-90deg) translateZ(157px);
+}
+
+#slide_sec1 div:nth-child(11) {
+    width: 142px;
+    height: 228px;
+    transform: rotateY(90deg) translateZ(179px);
+}
+
+#slide_sec1 div:nth-child(12) {
+    width: 142px;
+    height: 228px;
+    transform: rotateY(-90deg) translateZ(71px);
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateY(0) rotateX(0);
+    }
+    100% {
+        transform: rotateY(710deg) rotateX(710deg);
+    }
+}
+
+/*后退按钮*/
+.back-btn {
+    display: flex;
+    position: fixed;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    top: 30px;
+    left: 30px;
+    border-radius: 50px;
+    background-color: #cccac7;
+}
+
+.back-btn a {
+    display: block;
+    margin: auto;
+}
+
+.back-btn img {
+    width: 60px;
+    height: 60px;
+}
+
+/*前进按钮*/
+.front-btn {
+    display: flex;
+    position: fixed;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    bottom: 30px;
+    right: 30px;
+}
+
+.front-btn a {
+    display: block;
+    margin: auto;
+}
+
+.front-btn img {
+    width: 60px;
+    height: 60px;
+}
+
+/*返回按钮*/
+.back1-btn {
+    display: flex;
+    position: fixed;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    bottom: 30px;
+    left: 30px;
+    visibility: hidden;
+}
+
+.back1-btn a {
+    display: block;
+    margin: auto;
+}
+
+.back1-btn img {
+    width: 60px;
+    height: 60px;
+}
+
+/*#######清除浮动########*/
+.clearfix:after {
+    content: '.';
+    height: 0;
+    display: block;
+    clear: both;
 }
