--- a/css/index.css
+++ b/css/index.css
@@ -445,6 +445,34 @@ nav {
     height: 60px;
 }
 
+#details {
+    /* 弹性布局 让页面元素垂直+水平居中 */
+    display: none;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    /* 让页面始终占浏览器总高 */
+    height: 100vh;
+    width: 100vw;
+    left: -1vw;
+    top: -101vh;
+    background-color: #ffffff;
+    background-image: url('../images/box/bg1.png');
+    background-size: auto;
+    z-index: 3;
+}
+
+#details img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+#details-back-btn img {
+    width: 50px;
+    height: 40px;
+}
+
 /*#######清除浮动########*/
 .clearfix:after {
     content: '.';
