添加包装展示

--- a/css/index.css
+++ b/css/index.css
@@ -387,7 +387,7 @@ nav {
     width: 60px;
     height: 60px;
     top: -43vh;
-    left: -5vh;
+    left: -40px;
     border-radius: 50px;
     background-color: #cccac7;
 }
