--- a/css/details.css
+++ b/css/details.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     /* 让页面始终占浏览器总高 */
     height: 100vh;
-    background-color: #ffffff;
+    background-color: #F8F7F7;
     background-image: url('../images/box/bg1_min.png');
     background-size: auto;
     z-index: 3;
@@ -36,12 +36,8 @@ body {
     background-color: #cccac7;
 }
 
-.back-btn a {
-    display: block;
-    margin: auto;
-}
-
 .back-btn img {
     width: 50px;
     height: 40px;
+    margin: auto;
 }
