--- a/css/index.css
+++ b/css/index.css
@@ -257,7 +257,7 @@ nav {
 /*##########详情页面########*/
 #slide-sec {
     /* 弹性布局 让页面元素垂直+水平居中 */
-    display: none;
+    display: flex;
     position: relative;
     justify-content: center;
     align-items: center;
@@ -265,6 +265,7 @@ nav {
     height: 100vh;
     width: 100vw;
     z-index: 2;
+    visibility: hidden;
 }
 
 #slide-sec iframe {
