--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,7 @@ nav {
     /* 让页面始终占浏览器总高 */
     height: 100vh;
     width: 100vw;
+    top: -100vh;
     z-index: 2;
     visibility: hidden;
 }
