--- a/css/index.css
+++ b/css/index.css
@@ -93,27 +93,49 @@ nav {
 
 /*########底部#######*/
 .container {
-    /* 这里的弹性布局 让元素能够水平排列 并且能够让a这个行内元素设置宽度和高度 */
-    display: flex;
-    position: fixed;
-    bottom: 30px;
-    left: 0;
-}
-
-.container .btn {
     /* 溢出隐藏 */
     overflow: hidden;
-    /* 相对定位 */
-    position: relative;
+    display: block;
     width: 70px;
     height: 90px;
     text-align: center;
     margin: 0 0;
+    position: fixed;
+    bottom: 30px;
+    left: 0;
     border-radius: 0 15px 15px 0;
-    background-color: #fff;
+    background-color: #ffffff;
     /* 盒子阴影 */
     box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
     animation: glow 8s linear infinite;
+}
+
+.container img {
+    width: 100%;
+    user-select: none;
+}
+
+.rcontainer {
+    /* 溢出隐藏 */
+    overflow: hidden;
+    display: block;
+    width: 70px;
+    height: 90px;
+    text-align: center;
+    margin: 0 0;
+    position: fixed;
+    bottom: 30px;
+    right: 0;
+    border-radius: 15px 0 0 15px;
+    background-color: #ffffff;
+    /* 盒子阴影 */
+    box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
+    animation: glow 8s linear infinite;
+}
+
+.rcontainer img {
+    width: 100%;
+    user-select: none;
 }
 
 @keyframes glow {
@@ -124,40 +146,6 @@ nav {
         background-position: 400%;
     }
 }
-
-.container .fa {
-    /* 字体图标可以直接使用字体大小来设置大小 */
-    font-size: 38px;
-    /* 缩放0.8倍 */
-    transform: scale(0.8);
-    /* 行高 让这个字体图标垂直居中于盒子内 */
-    line-height: 90px;
-    /* 设置一下过渡 */
-    /* 第三个值是贝塞尔曲线 让运动曲线有无限可能 可以到官网自行探索 https://cubic-bezier.com/ */
-    transition: all 0.4s cubic-bezier(0.31, -0.1, 0.43, 1.59);
-}
-
-.container .btn::before {
-    content: "";
-    /* 绝对定位 */
-    position: absolute;
-    top: 90%;
-    left: -110%;
-    width: 120%;
-    height: 120%;
-    /* 顺时针旋转45度 */
-    transform: rotate(45deg);
-    transition: all 0.4s cubic-bezier(0.31, -0.1, 0.43, 1.59);
-}
-
-.container .btn .fa-instagram {
-    color: #3b5988;
-}
-
-.container .btn_instagram::before {
-    background-color: #3b5988;
-}
-
 
 /* 外层容器 */
 .my_swiper {
@@ -293,34 +281,6 @@ nav {
 }
 
 .back-btn img {
-    width: 50px;
-    height: 40px;
-}
-
-#details {
-    /* 弹性布局 让页面元素垂直+水平居中 */
-    display: none;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    /* 让页面始终占浏览器总高 */
-    height: 100vh;
-    width: 100vw;
-    left: -1vw;
-    top: -101vh;
-    background-color: #ffffff;
-    background-image: url('../images/box/bg1.png');
-    background-size: auto;
-    z-index: 3;
-}
-
-#details img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-#details-back-btn img {
     width: 50px;
     height: 40px;
 }
