--- a/css/long.css
+++ b/css/long.css
@@ -57,8 +57,8 @@ img {
     text-align: center;
     width: 60px;
     height: 60px;
-    top: 30px;
-    left: 30px;
+    top: 10px;
+    left: 10px;
     border-radius: 50px;
     background-color: #cccac7;
     z-index: 10;
@@ -77,8 +77,8 @@ img {
     text-align: center;
     width: 100px;
     height: 100px;
-    bottom: 30px;
-    right: 30px;
+    bottom: 0;
+    right: 0;
     z-index: 10;
 }
 
@@ -94,8 +94,8 @@ img {
     text-align: center;
     width: 100px;
     height: 100px;
-    bottom: 30px;
-    left: 30px;
+    bottom: 0;
+    left: 0;
     visibility: hidden;
     z-index: 10;
 }
@@ -103,4 +103,5 @@ img {
 .back1-btn img {
     width: 60px;
     height: 60px;
+    margin: auto;
 }
