--- a/css/details.css
+++ b/css/details.css
@@ -13,14 +13,7 @@ body {
     /* 让页面始终占浏览器总高 */
     height: 100vh;
     background-color: #F8F7F7;
-    background-image: url('../images/box/bg1_min.png');
-    background-size: auto;
     z-index: 3;
-}
-
-#details-img {
-    width: 90%;
-    object-fit: cover;
 }
 
 /*返回按钮*/
@@ -34,10 +27,34 @@ body {
     left: 10px;
     border-radius: 50px;
     background-color: #cccac7;
+    z-index: 10;
 }
 
 .back-btn img {
     width: 50px;
     height: 40px;
     margin: auto;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background-color: white;
+}
+
+.swiper-slide img {
+    width: 100vw;
+    max-width: 100%;
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
 }
