--- a/css/video.css
+++ b/css/video.css
@@ -17,6 +17,7 @@ body {
 nav {
     width: 100%;
     height: 96px;
+    margin-top: 65px;
 }
 
 /*logo样式*/
@@ -165,4 +166,24 @@ nav {
 
 .content .textBox .text p:last-child {
     margin-bottom: 0;
+}
+
+/*返回按钮*/
+.back-btn {
+    display: flex;
+    position: fixed;
+    text-align: center;
+    width: 60px;
+    height: 60px;
+    top: 65px;
+    left: 10px;
+    border-radius: 50px;
+    background-color: #cccac7;
+    z-index: 10;
+}
+
+.back-btn img {
+    width: 50px;
+    height: 40px;
+    margin: auto;
 }
