--- a/css/long.css
+++ b/css/long.css
@@ -11,9 +11,7 @@ body {
     /* 让页面始终占浏览器总宽 */
     width: 100vw;
     height: 100%;
-    background-color: #DC8F59;
-    background-image: url('../images/box/bg6_min.png');
-    background-size: auto;
+    background-color: #ffffff;
     /* 视距 增加盒子的立体感 */
 }
 
