--- a/css/video.css
+++ b/css/video.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #F8F7F7;
-    background-image: url('../images/box/bg3_min.png');
+    background-image: url('../images/box/bg7.jpg');
     background-size: auto;
     z-index: 3;
 }
