--- a/css/3dbox.css
+++ b/css/3dbox.css
@@ -138,7 +138,9 @@ body {
     top: 65px;
     left: 10px;
     border-radius: 50px;
-    background-color: #cccac7;
+    background-image: url("../images/back_bg.png");
+    background-repeat:  no-repeat;
+    background-size: 100% 100%;
 }
 
 .back-btn img {
