--- a/css/3dbox.css
+++ b/css/3dbox.css
@@ -119,12 +119,96 @@ body {
     transform: rotateY(-90deg) translateZ(71px);
 }
 
+#bc1 {
+    animation: bc1 5s linear infinite;
+}
+
+#bc2 {
+    animation: bc2 5s linear infinite;
+}
+
+#bc3 {
+    animation: bc3 5s linear infinite;
+}
+
+#bc4 {
+    animation: bc4 5s linear infinite;
+}
+
+#bc5 {
+    animation: bc5 5s linear infinite;
+}
+
+#bc6 {
+    animation: bc6 5s linear infinite;
+}
+
 @keyframes rotate {
     0% {
         transform: rotateY(0) rotateX(0);
     }
     100% {
         transform: rotateY(710deg) rotateX(710deg);
+    }
+}
+
+@keyframes bc1 {
+    0% {
+        transform: translateZ(71px);
+    }
+    50% {
+        transform: translateZ(171px);
+    }
+    100% {
+        transform: translateZ(71px);
+    }
+}
+
+@keyframes bc2 {
+    0% {
+        transform: rotateX(-180deg) translateZ(71px);
+    }
+    50% {
+        transform: rotateX(-180deg) translateZ(171px);
+    }
+    100% {
+        transform: rotateX(-180deg) translateZ(71px);
+    }
+}
+
+@keyframes bc3 {
+    0% {
+        transform: rotateX(90deg) translateZ(71px);
+    }
+    50% {
+        transform: rotateX(90deg) translateZ(171px);
+    }
+    100% {
+        transform: rotateX(90deg) translateZ(71px);
+    }
+}
+
+@keyframes bc5 {
+    0% {
+        transform: rotateY(90deg) translateZ(179px);
+    }
+    50% {
+        transform: rotateY(90deg) translateZ(279px);
+    }
+    100% {
+        transform: rotateY(90deg) translateZ(179px);
+    }
+}
+
+@keyframes bc6 {
+    0% {
+        transform: rotateY(-90deg) translateZ(71px);
+    }
+    50% {
+        transform: rotateY(-90deg) translateZ(171px);
+    }
+    100% {
+        transform: rotateY(-90deg) translateZ(71px);
     }
 }
 
