--- a/css/3dbox.css
+++ b/css/3dbox.css
@@ -321,3 +321,12 @@ body {
         transform: rotate(360deg);
     }
 }
+
+#prompt {
+    position: fixed;
+    float: left;
+    bottom: 180px;
+    left: auto;
+    width: 70%;
+    font-size: 50px;
+}
