--- a/css/index.css
+++ b/css/index.css
@@ -39,63 +39,108 @@ nav {
 }
 
 /*#########加载动画部分############*/
-.arjs-loader {
-    height: 100%;
-    width: 100%;
+#sk-fa {
     position: absolute;
-    top: 0;
+    top: 50%;
+    left: 45%;
+    z-index: 999;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.8);
+}
+
+.sk-chase {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    animation: sk-chase 2.5s infinite linear both;
+}
+
+.sk-chase-dot {
+    width: 100%;
+    height: 100%;
+    position: absolute;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 0;
+    animation: sk-chase-dot 2.0s infinite ease-in-out both;
 }
 
-.arjs-loader div {
-    /*text-align: center;*/
-    /*font-size: 1.25em;*/
-    /*color: white;*/
-    /* 弹性布局 让页面的元素垂直+水平居中 */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.sk-chase-dot:before {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 25%;
+    background-color: #fff;
+    border-radius: 100%;
+    animation: sk-chase-dot-before 2.0s infinite ease-in-out both;
 }
 
-.arjs-loader div span {
-    /* 这里可以直接使用外部引入的字体样式 */
-    font-family: "Titan One";
-    font-size: 30px;
-    color: #fff;
-    /* 这是字体的描边第一个值是粗细,第二个值是颜色 */
-    -webkit-text-stroke: 3px rgba(0, 0, 0, 0);
-    /* 单词大写 */
-    text-transform: uppercase;
-    /* 文字阴影 */
-    text-shadow: 0 0 #f3c623, 0 0 #f2aaaa;
-    /* 让文字先向下走自身高度的50%,然后顺时针旋转4度 */
-    transform: translate(0, 50%) rotate(4deg);
-    /* 动画 名称 时长 第三个值是延迟时长 calc是自动计算的方法,里面写的var()函数是会调用我们事先自定义好的属性值,我们刚才给span添加的--i:*就是一个自定义属性,var()能调用到相应的span的定义好的属性值,然后在*120ms来计算每个文字的延迟时长省时省力,第四个值是两头慢,中间快,第五个值是无线运动 */
-    animation: move 2s calc(var(--i) * 120ms) ease-in-out infinite;
+.sk-chase-dot:nth-child(1) {
+    animation-delay: -1.1s;
 }
 
-/* 定义动画 */
-@keyframes move {
-    0%,
+.sk-chase-dot:nth-child(2) {
+    animation-delay: -1.0s;
+}
+
+.sk-chase-dot:nth-child(3) {
+    animation-delay: -0.9s;
+}
+
+.sk-chase-dot:nth-child(4) {
+    animation-delay: -0.8s;
+}
+
+.sk-chase-dot:nth-child(5) {
+    animation-delay: -0.7s;
+}
+
+.sk-chase-dot:nth-child(6) {
+    animation-delay: -0.6s;
+}
+
+.sk-chase-dot:nth-child(1):before {
+    animation-delay: -1.1s;
+}
+
+.sk-chase-dot:nth-child(2):before {
+    animation-delay: -1.0s;
+}
+
+.sk-chase-dot:nth-child(3):before {
+    animation-delay: -0.9s;
+}
+
+.sk-chase-dot:nth-child(4):before {
+    animation-delay: -0.8s;
+}
+
+.sk-chase-dot:nth-child(5):before {
+    animation-delay: -0.7s;
+}
+
+.sk-chase-dot:nth-child(6):before {
+    animation-delay: -0.6s;
+}
+
+@keyframes sk-chase {
     100% {
-        text-shadow: 0 0 #f3c623, 0 0 #f2aaaa;
+        transform: rotate(360deg);
     }
-    33.33% {
-        text-shadow: 0 40px #f37121, 0 60px #f2aaaa;
+}
+
+@keyframes sk-chase-dot {
+    80%, 100% {
+        transform: rotate(360deg);
     }
+}
+
+@keyframes sk-chase-dot-before {
     50% {
-        text-shadow: 0 0 #8fc0a9, 0 0 #84a9ac;
-        /* 这个跟刚才写的刚好相反动画到一半向上走自身的一半,逆时针旋转4度 */
-        transform: translate(0, -50%) rotate(-4deg);
+        transform: scale(0.4);
     }
-    66.66% {
-        text-shadow: 0 -40px #d54062, 0 -60px #8fc0a9;
+    100%, 0% {
+        transform: scale(1.0);
     }
 }
 
