--- a/css/long.css
+++ b/css/long.css
@@ -116,6 +116,8 @@ img {
     width: 100%;
     height: 100vh;
     margin: auto;
+    position: fixed;
+    z-index: 99;
     backdrop-filter: blur(30px);
 }
 
