--- a/css/video.css
+++ b/css/video.css
@@ -155,7 +155,7 @@ nav {
 }
 
 .content .textBox .text {
-    padding: 20px;
+    /*padding: 20px;*/
     width: calc(100% - 150px);
     position: relative;
     z-index: 2;
